--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -297,8 +297,18 @@ main .content-image h2 {
     header {
         height: 35%;
     }
-    .content-menu .menu ul {
-        display: none;
+    .content-menu {
+        width: 100%;
+        right: 0;
+        position: fixed;
+        background-color: #132240;
+        z-index: 10;
+        height: 50px;
+        border-radius: 5px 5px 10px 10px;
+    }
+    .content-menu ul {
+        justify-content: center;
+        font-size: .7em;
     }
     .menu-icon-mobile {
         display: block;
