--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -9,7 +9,7 @@ body {
     width: 100vw;
     height: 100vh;
     overflow-x: hidden;
-    background-color: #000;
+    background-color: #1B1C26;
 }
 
 .container-all {
@@ -301,14 +301,14 @@ main .content-image h2 {
         width: 100%;
         right: 0;
         position: fixed;
-        background-color: #132240;
+        background-color: #1B1C26;
         z-index: 10;
-        height: 50px;
-        border-radius: 5px 5px 10px 10px;
+        height: 70px;
+        border-radius: 0px 0px 10px 10px;
     }
     .content-menu ul {
         justify-content: center;
-        font-size: .7em;
+        font-size: .8em;
     }
     .menu-icon-mobile {
         display: block;
